--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "postcss-scrim-gradient",
   "version": "0.1.1",
-  "description": "Simple scrim gradient",
+  "description": "PostCSS simple scrim gradient plugin",
   "main": "index.js",
   "scripts": {
     "test": "ava \"test/*.test.js\" -v -s"
