--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
   "scripts": {
     "test": "ava \"test/*.test.js\" -v -s"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mpeutz/postcss-simple-scrim.git"
+  },
   "keywords": [
-    "scrim"
+    "scrim",
+    "postcss",
+    "postcss-plugin"
   ],
   "author": "Mike Peutz <mpeutz@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "ava": "^1.2.1",
+    "ava": "^1.3.1",
     "postcss": "^7.0.14",
     "postcss-value-parser": "^3.3.1"
   }
