--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "ava": "^1.3.1",
     "postcss": "^7.0.14",
     "postcss-value-parser": "^3.3.1"
+  },
+  "dependencies": {
+    "tinycolor2": "^1.4.1"
   }
 }
